--- a/index.html
+++ b/index.html
@@ -58,38 +58,44 @@
   <section id="middle-section">
     <div class="container">
       <img class="profile-img" src="images/fox.svg" alt="fox-img">
-      <h2>Hello!</h2>
+      <h2>Hi!</h2>
       <p class="profile-description">Nice to meet you!</p>
       <p class="profile-description">I'm an application support engineer based in Atlanta, Georgia.</p>
+      <p class="profile-description">I have 3 years of experience working with web applications.</p>
     </div>
     <hr>
 
-    <h2 class="skills-header">Skills</h2>
+    <h2 class="skills-title">Skills</h2>
 
     <div class="container">
-      <div class="skill-row">
-        <img class="skill-img" src="images/code.svg" alt="code-img">
-        <div class="skill-description-container">
-          <h3>Web Development</h3>
-          <p class="skill-description1 ">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
-            Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      <div class="skill-row row">
+        <img class="skill-img col-lg-2 col-md-12" src="images/code.svg" alt="code-img">
+        <div class="skill-description-container1 col-lg-9 col-md-12">
+          <h3 class="skills-header">Web Development</h3>
+          <p class="skill-description1">Websites should be beautiful and functional. 
+            I'm always working on learning the latest and greatest technologies to implement in my projects. </p>
         </div>
       </div>
 
-      <div class="skill-row">
-        <img class="skill-img" src="images/tower-pc.svg" alt="operations-img">
-        <h3>Operations Engineering</h3>
-        <p class="skill-description2">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum
-          interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      <div class="skill-row row">
+        <img class="skill-img col-lg-2 order-lg-2 col-md-12" src="images/tower-pc.svg" alt="operations-img">
+        <div  class="skill-description-container2 col-lg-9 col-md-12">
+          <h3 class="skills-header">Operations Engineering</h3>
+          <p class="skill-description2">I can help keep your web application up and running! 
+            My specialties include monitoring, investigating, and creating simple solutions.</p>
+        </div>
       </div>
     </div>
+
     <hr>
-    <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui,
-        ornare erat.</p>
-      <a class="BUTTON_AMJ" href="mailto:salvadort.martinez@gmail.com">CONTACT ME</a>
+
+    <div class="container">
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>I'd love to work with you!</h3>
+        <p class="contact-message">If you have a question or want to reach out, please send me a message.</p>
+        <div id="contact-btn" class="container-fluid"><a class="BUTTON_AMJ col-lg-12" href="mailto:salvadort.martinez@gmail.com">Email Me!</a></div>
+      </div>
     </div>
   </section>
 
@@ -97,13 +103,10 @@
   <section class="bottom-container">
     <div class="footer-links">
       <a class="footer-link" href="https://www.linkedin.com/in/salvador-martinez/">LinkedIn</a>
-      <i class="fab fa-linkedin"></i>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <!-- <i class="fab fa-linkedin"></i> -->
+      <a class="footer-link" href="https://stackoverflow.com/users/9351561/salvador-martinez">Stack Overflow</a>
+      <a class="footer-link" href="https://imsalvador.com">Website</a>
     </div>
-    <a id="pi-text" href="https://www.raspberrypi.org/">
-      <img id="pi-img" src="images/raspberry-pi.png" alt="raspberry-pi-img" />
-    </a>
     <p class="copyright-text">2020 Salvador Martinez</p>
   </section>
 
